--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
             </div>
         </nav>
         <!-- Page Header-->
-        <header class="masthead" style="background-image: url('assets/img/socialjusticescales.jpeg')">
+        <header class="masthead" style="background-image: url(assets
+/A22DBDCA-19C7-493D-A6CA-50C1E5534828.jpeg)">
             <div class="container position-relative px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
