--- a/index.html
+++ b/index.html
@@ -39,14 +39,13 @@
             </div>
         </nav>
         <!-- Page Header-->
-        <header class="masthead" style="background-image: url(assets
-/A22DBDCA-19C7-493D-A6CA-50C1E5534828.jpeg)">
+        <header class="masthead" style="background-image: url(assets/A22DBDCA-19C7-493D-A6CA-50C1E5534828.jpeg)">
             <div class="container position-relative px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
                         <div class="site-heading">
-                            <h1>This is the Title of Your Project</h1>
-                            <span class="subheading">You should put a catchy slogan here or hashtag pertaining to your topic</span>
+                            <h1>Cyberbullying</h1>
+                            <span class="subheading">Hit delete, and just smile </span>
                         </div>
                     </div>
                 </div>
