--- a/firstpost.html
+++ b/firstpost.html
@@ -37,7 +37,7 @@
             </div>
         </nav>
         <!-- Page Header-->
-        <header class="masthead" style="background-image: url(assets/Screen Shot 2023-04-28 at 10.14.18 PM.png)">
+        <header class="masthead" style="background-image: url(assets/Unknown-2.jpeg">
             <div class="container position-relative px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
@@ -46,7 +46,7 @@
                             <h2 class="subheading">93% of teens reported to endure negative physical and mental problems after, and while being a victim of cyberbullying</h2>
                             <span class="meta">
                                 Posted by
-                                <a href="#!Alayna Bryant</a>
+                                <a href="#!>Alayna Bryant</a>
                                 on April 28, 2023
                             </span>
                         </div>
