--- a/firstpost.html
+++ b/firstpost.html
@@ -45,8 +45,8 @@
                             <h1>Online actions have offline impacts</h1>
                             <h2 class="subheading">93% of teens reported to endure negative physical and mental problems after, and while being a victim of cyberbullying</h2>
                             <span class="meta">
-                                Posted by
-                                <a href="#!>Alayna Bryant</a>
+                                Posted by Alayna Bryant
+                                <a href="#!> Alayna Bryant </a>
                                 on April 28, 2023
                             </span>
                         </div>
