--- a/firstpost.html
+++ b/firstpost.html
@@ -59,8 +59,8 @@
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
-                        <p>This is where you are diving into your information. Please be concise. Avoid walls of text. Only quote when you cannot possibly say it better yourself. Otherwise, you are summarizing the most relevant and key information for your audience.</p>
-                        <p>Everytime you want to create a new paragraph, use these paragraph containers. For concision, you should have no more than three paragraphs and a minimum of one.</p>
+                        <p>Cyber bullying is now easier than ever, with our wide ranges of technology and different types of media. You might constantly see things you don't agree with, or people you don't prefer, and you might want to voice how you feel about it, but think before you type .</p>
+                        <p>93% of highschoolers reported to be a vivtim of cyberbullying. I want you to take that statistic in. 93%. MOST teens have experienced cyberbullying of some sort, and almost all have been negatively physically and mentally impacted..</p>
                         <p>Be sure every paragraph has a main claim or takes the reader somewhere new. Then unpack that claim. What is significant? What do you want your viewer to remember? What is at stake?</p>
                         <p>If you do not want another paragraph, then simply delete ones that are unecessary.</p>
                         <p>Please be sure each post has some closure. That is, the last paragraph should be memorable. If they remember nothing else from this page, what do you hope your viewer learned?</p>
