--- a/firstpost.html
+++ b/firstpost.html
@@ -60,10 +60,9 @@
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
                         <p>Cyber bullying is now easier than ever, with our wide ranges of technology and different types of media. You might constantly see things you don't agree with, or people you don't prefer, and you might want to voice how you feel about it, but think before you type .</p>
-                        <p>93% of highschoolers reported to be a vivtim of cyberbullying. I want you to take that statistic in. 93%. MOST teens have experienced cyberbullying of some sort, and almost all have been negatively physically and mentally impacted..</p>
-                        <p>Be sure every paragraph has a main claim or takes the reader somewhere new. Then unpack that claim. What is significant? What do you want your viewer to remember? What is at stake?</p>
-                        <p>If you do not want another paragraph, then simply delete ones that are unecessary.</p>
-                        <p>Please be sure each post has some closure. That is, the last paragraph should be memorable. If they remember nothing else from this page, what do you hope your viewer learned?</p>
+                        <p>93% of highschoolers reported to be a vivtim of cyberbullying. I want you to take that statistic in. 93%. MOST teens have experienced cyberbullying of some sort, and almost all have been negatively physically and mentally impacted.</p>
+                        <p> Most victims reprt feelings of sadness, lonliness, a sense of powerless, depression, and even some report suicidal. Some physically feel feel constant heachaces, tiredness,stomaches, and extreme caces of insomnia. with all of this in mind, notice how much your words can really impact an individual. </p>
+                      
                         <h2 class="section-heading">This is the code if you would like to put each paragraph under a different heading</h2>
                         <p>You can include calls to action or organize your information with subheadings like so. Just be sure you adjust the title of this heading.</p>
                         <p>If you want to include a block quote, insert it in the code below.</p>
