--- a/firstpost.html
+++ b/firstpost.html
@@ -70,9 +70,9 @@
                         <h2 class="section-heading">Now lets take a look about what harm cyberbullying can do.</h2>
                         </p>
                         <iframe width="560" height="315" src="https://www.youtube.com/embed/fStdkvn4tnw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                        <span class="caption text-muted">This is how you add captions under a video or image. Cite your video/image here. You may also say something about it, if you like.</span>
-                        <p>Just like a quote, you should not leave an image or video resting there. Say something about what the content does for your site. This can also be unpacked prior to the video in the paragraphs above.</p>
-                        <p>While the whole site should include videos, images, and pdfs, not every member has to do all three. Choose whether you want a video to cite and unpack or a PDF. If it is a video, you only need to include the video and information about it (your summary). If it is a PDF, you should include a picture. Simply delete an aspect of this post that is unnecessary for you.</p>
+                        <span class="caption text-muted">Clip displayed above is from the popluar movie Cyberbully.</span>
+                        <p>To give you context from the clip above if you have never seen the movie, the main character, Taylor,went months with getting bullied online from an anonymous person, and didn't tell a single soul. Then, the issue spread, and the whole school was spreading rumors and bullied her. She had no one in her corner. This lead to her becoming depressed, and even sucidal. So please, think befoer you hit send .</p>
+                        
                         <p>
                             Information by whomever you are citing
                             <a href="#!">Place the link within the quotations and write the title here</a>
