--- a/firstpost.html
+++ b/firstpost.html
@@ -74,10 +74,10 @@
                         <p>To give you context from the clip above if you have never seen the movie, the main character, Taylor,went months with getting bullied online from an anonymous person, and didn't tell a single soul. Then, the issue spread, and the whole school was spreading rumors and bullied her. She had no one in her corner. This lead to her becoming depressed, and even sucidal. So please, think befoer you hit send .</p>
                         
                         <p>
-                            Information by whomever you are citing
-                            <a href="#!">Place the link within the quotations and write the title here</a>
-                            &middot; Images by
-                            <a href="https://online.marymount.edu/blog/3-ways-education-leaders-promoting-social-justice">Marymount University</a>
+                            Information by whomever Charisse L Nixon
+                            <a href="#!">"https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4126576/"</a>
+                            &middot; Images by Cyber Security Authority
+                            <ahttps://www.csa.gov.gh/cyberbullying.php</a>
                         </p>
                     </div>
                 </div>
