--- a/firstpost.html
+++ b/firstpost.html
@@ -77,7 +77,7 @@
                             Information by Charisse L Nixon
                             <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4126576/"</a>
                             &middot; Images by
-                            <a href="https://www.csa.gov.gh/cyberbullying.php">hello</a>
+                            <a href="https://www.csa.gov.gh/cyberbullying.php">CyberSecurity</a>
                         </p>
                     </div>
                 </div>
