--- a/about.html
+++ b/about.html
@@ -5,8 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>ISS210Sec#Team#</title>
-        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+        <title>ISS210Sec#005Team#23</title>
+        <link rel="icon" type="image/x-icon" href="assets/Unknown-2.jpeg" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
         <!-- Google fonts-->
@@ -42,8 +42,8 @@
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
                         <div class="page-heading">
-                            <h1>What is [said topic] all about?</h1>
-                            <span class="subheading">by [member's name]</span>
+                            <h1>What is Cyberbullying all about?</h1>
+                            <span class="subheading">by [Alayna Bryant]</span>
                         </div>
                     </div>
                 </div>
