--- a/about.html
+++ b/about.html
@@ -54,10 +54,11 @@
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
-                        <p>This is the main about page of the project. This should include general information and the key points.</p>
-                        <p>Keep in mind, your audience may never travel past the about page so think about how you can get them to care. Why is this an issue?</p>
-                        <p>You may also want to signpost the development of the website. In other words, describe the site. For example, we have gathered information from scholars and activists and summarized their work in our blog posts. Please click on each blog post to learn more about how you can get involved.</p>
-                        <p>Most importantly, include your call to action on this page. An organization we can join, a charity, phone numbers, actionable steps, etc.</p>
+                        <p>Teenagers started using social media and the internet in their everyday life as an extra form of communication, but nowadays, it's a necessity. In fact, today it is reported that 95% of teenagers are on some form of social media. Having such easy access to non face to face interactions creates numerous opportunities to connect with friends, but it also gives people the chance to hide behind their screens.</p>
+                        <p>Cyberbullying involves someone hurting another individual from just posting negative comments and things towards them to having just one on one interactions. Cyberbullying is different from traditional bullying, and the simple answer to why is that it is easier.</p>
+                        <p>With cyberbullying, you have an unlimited amount of targets, and also have a massive audience that could see what is going on. You can take screenshots and save embarrassing photos, videos, and information saved in seconds. The biggest thing? There is absolutely no supervision, and you can even create anonymous accounts, so no one will ever know who you are. The bully never sees their target face to face, so they will never truly see how much their words and actions are affecting their victim. 
+</p>
+                        <p> If you or a loved one is a victim of cyberbullying and you do not know who to turn to, there are many hotlines available for you. The main one used is STOP BULLYINNG NOW (1-800-273-8255). .</p>
                     </div>
                 </div>
             </div>
