--- a/thirdpost.html
+++ b/thirdpost.html
@@ -46,7 +46,7 @@
                             <h2 class="subheading">Cyberbullying is bullying with the use of digital technologies</h2>
                             <span class="meta">
                                 Posted by
-                                <a href="#!">Insert link in the quotations. Whatever is written here is the title</a>
+                                <a href="#!"> Joseph Walker </a>
                                 on April 28, 2023
                             </span>
                         </div>
@@ -59,27 +59,11 @@
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
-                        <p>This is where you are diving into your information. Please be concise. Avoid walls of text. Only quote when you cannot possibly say it better yourself. Otherwise, you are summarizing the most relevant and key information for your audience.</p>
-                        <p>Everytime you want to create a new paragraph, use these paragraph containers. For concision, you should have no more than five paragraphs and a minimum of one.</p>
-                        <p>Be sure every paragraph has a main claim or takes the reader somewhere new. Then unpack that claim. What is significant? What do you want your viewer to remember? What is at stake?</p>
-                        <p>If you do not want another paragraph, then simply delete ones that are unecessary.</p>
-                        <p>Please be sure each post has some closure. That is, the last paragraph should be memorable. If they remember nothing else from this page, what do you hope your viewer learned?</p>
-                        <h2 class="section-heading">Second heading</h2>
-                        <p>You can include calls to action or organize your information with subheadings like so. Just be sure you adjust the title of these headings if you use them.</p>
-                        <p>This means your headings should not say second heading.</p>
-                        <blockquote class="blockquote">You may copy or replace this code if you want to quote someone. Four lines of quotation or more (on the page) should be in block quotes, which is why these containers are called block quotes. Not creative but effective.</blockquote>
-                        <p>Remember to always unpack a block quote. You should leave the reader remembering your voice, not someone else's.</p>
-                        <h2 class="section-heading">Third heading</h2>
-                        <p>Each blog post should include an image and a pdf or a video. Included in the following lines is the code for including an image. In the link below, include your pdf. The image is the source, labeled src below. You simply have to follow the directory path to replace the image. The directory path as is is stating you will find this image if you go to assets, then image, and there you will find the image I have called. This must be the exact path. Changing punctutation or capitalization will mean the site cannot find your picture. Remember, machines are incredibly literal.</p>
-                        <a href="#!"><img class="img-fluid" src="assets/img/handstoheart.jpeg" alt="..." /></a>
-                        <span class="caption text-muted">This is how you add captions under an image. Cite your image here. You may also say something about it, if you like.</span>
-                        <p>Just like a quote, you should not leave an image resting there. Say something about what the image does for your site.</p>
-                        <p>Finally, you may also include a video. Not every member has to do all three. Choose whether you want a video to cite and unpack or a PDF. If it is a video, you only need to include the video and information about it (your summary). If it is a PDF, you should include a picture.</p>
-                        <p>
-                            Information by Samantha Hurn's 
-                            <a href="assets/Hurn.pdf" target="_blank" alt="...">Chapter on "Animality"</a>
-                            &middot; Images by
-                            <a href="https://online.marymount.edu/blog/3-ways-education-leaders-promoting-social-justice">Marymount University</a>
+                        <p>the definition of cyberbullying is “Cyberbullying is bullying with the use of digital technologies.” An example of this world is spreading pictures or lies about someone over social media to talk down on them. One way to know if you are actually being bullied is if the so-called joke actually upsets you and people are laughing at you and not with you. Also if the bullying is taking place on a public platform where others can see that might be more than just a joke. Three effects that cyberbullying can have on a person are mentally, emotionally, and physically. Mentally it will make you feel upset, scared, or even angry. Emotionally would be when you feel ashamed or lose interest in things you care about. Physically someone might feel tired all the time from loss of sleep or headaches and stomach aches. If you are being bullied online there are many sites that you can reach out to so that you can get the help you need.</p>
+                            Information by Unicef 
+                            <a href="https://www.unicef.org/end-violence/how-to-stop-cyberbullying"</a>
+                            &middot; Images by National Education Association
+                            <a href="https://www.nea.org/professional-excellence/student-engagement/tools-tips/helping-students-deal-cyberbullies"</a>
                         </p>
                     </div>
                 </div>
